--- a/index.html
+++ b/index.html
@@ -920,24 +920,27 @@
 
 
 
-            <!-- 
+            
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="https://github.com/MikiZenebe/Book-Ocean-Mobile-App">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/mobileBanner.png" alt="task manager" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">Book Ocean</h3>
 
-                <p class="project-category">Applications</p>
+                <div>
+                  <p class="project-category">Applications</p>
+                  <p class="project-category" style="color: #FBD86F;">Expo/MERN Stack</p>
+                </div>
 
               </a>
-            </li> -->
+            </li>
 
 
 
